--- a/src/Views/StaticSite/Components/SocialInitiatives/style.scss
+++ b/src/Views/StaticSite/Components/SocialInitiatives/style.scss
@@ -1,6 +1,6 @@
 .social-initiative-container{
 display: grid;
-grid-template-columns: 50% 40%;
+grid-template-columns: 45% 35%;
 background-color: var(--ocean-blue);
 justify-content: center;
 align-items: center;
@@ -9,9 +9,11 @@ padding-bottom: 10rem;
 padding-top: 10rem;
 .social-initiative-image{
     width: 100%;
+    height: 90%;
     text-align: center;
     img{
         width: 100%;
+        height: 100%;
         //min-height: 400px;
         border-radius: 0px 100px 0px 100px;
     }
